<resources>
    <string name="app_name">Dotify</string>
    <string name="mini_player_text">%s - %s</string>
    <string name="mini_player_button">SHUFFLE</string>
    <string name="profile_button">PROFILE</string>
    <string name="statistics_button">PROFILE STATISTICS</string>
    <string name="about_button">ABOUT</string>
    <string name="user_image">Jason Mendoza</string>
    <string name="user_age">Age: 33</string>
    <string name="user_email">Email: bortles@thegoodplace.com</string>
    <string name="user_club">Favorite Club: Jacksonville Jaguars</string>
    <string name="user_profession">Profession: Pre-Successful DJ</string>
    <string name="creator">Creator: Rishabh Goyal</string>
    <string name="version">Version %s</string>
    <string name="university">University of Washington, Seattle</string>
    <string name="year">Year: Junior</string>
    <string name="major">Major: Computer Science</string>
    <string name="song_count">\"%s\" has been played %d times!</string>
    <string name="play_count">%d plays</string>
    <string name="image_desc">Album image of the song</string>
    <string name="app_logo">This is an image of our App Logo</string>
    <string name="prev">previous button</string>
    <string name="play">play button</string>
    <string name="next">next button</string>
    <string name="auto_refresh">Auto Refresh</string>
    <string name="new_music">New Uploaded Music</string>
    <string name="new_music_channel_description">This is a channel that notifies when there is new music uploaded</string>

</resources>